Closed Bug 370004 Opened 17 years ago Closed 17 years ago

Overriding the default attribute map on a per-LDAP directory basis won't work.

Categories

(MailNews Core :: LDAP Integration, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: standard8, Assigned: standard8)

Details

(Keywords: fixed-seamonkey1.1.1, fixed1.8.1.2)

Attachments

(1 file)

Attached patch The fixSplinter Review
If I have a LDAP server ldap_2.servers.foo and I define ldap_2.servers.foo.attrmap.Custom4 to only override the attribute for that server,  it doesn't override the ldap_2.servers.default.attrmap.Custom4 value.

Basically, we're passing the wrong pref name to get the full attribute map - we're passing ldap_2.servers.foo.maxHits instead of ldap_2.servers.foo. This isn't a regression - it seems to have been wrong from the time when we got the attribute map code.

The attached patch changes the call to use m_DirPrefId which is the proper thing to use (in theory the code that gets maxHits could be simplified as well, but I'll address that in a separate bug).
Attachment #254678 - Flags: superreview?(bienvenu)
Attachment #254678 - Flags: review?(bienvenu)
Comment on attachment 254678 [details] [diff] [review]
The fix

thx, Mark!
Attachment #254678 - Flags: superreview?(bienvenu)
Attachment #254678 - Flags: superreview+
Attachment #254678 - Flags: review?(bienvenu)
Attachment #254678 - Flags: review+
Comment on attachment 254678 [details] [diff] [review]
The fix

Patch checked into trunk. Requesting approval for 1.8 branch.
Attachment #254678 - Flags: approval-thunderbird2?
Fixed on trunk.
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Attachment #254678 - Flags: approval-thunderbird2? → approval-thunderbird2+
Checked into 1.8 branch.
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: