Fix Bug 370004 Overriding the default attribute map on a per-LDAP directory basis won't work. r/sr=bienvenu